--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -242,6 +242,7 @@
 @media only screen and (max-width: 480px){
 /* Header Responsive */
     #header{
+        max-width:480px;
         height:auto;
     }
     .header-nav{
@@ -314,3 +315,107 @@
 }    
 
 /* Media Queries */
+
+@media screen and (min-width: 481px) and (max-width: 768px){
+    /* Header Responsive */
+        #header{
+            max-width:768px;
+            height:auto;
+        }
+        .header-nav{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .nav-links a{
+            margin-right: 26px;
+            text-decoration: none;
+            color:#FFFFFF;
+            font-size: 15px;
+        }
+        .nav-button{
+            width:113px;
+            height:34px;
+        }
+        
+    /* Header Responsive */
+    /* Header Banner Responsive */
+        .copa-logo-title{
+            margin-top: 40px;
+            max-width:100%;
+            grid-template-columns: 1fr 1fr;
+            column-gap: none;
+        }
+        .copa-title h1{
+            font-size: 36px;
+            margin: 30px 49px 9.5px 33px
+        }
+        .watch-button{
+            margin-top: 27px;
+            margin-left: 33px;
+            margin-bottom: 15px;
+            width: 168px;
+            height:44px;
+        }
+        .copa-logo img{
+            width:329px;
+            height: 260px;
+        }
+        .copa-logo img:hover{
+            animation-iteration-count: 1;
+        }
+    
+       
+    /* Header Banner Responsive */ 
+    /* Player Card Responsive */
+        .player-cards{
+            display: grid;
+            grid-template-columns:1fr 1fr;
+            column-gap: 10px;
+        }
+       .card{
+           width:320px;
+           height:auto;
+       }
+    /* Player Card Responsive */
+    
+    /*High Light CSS Responsive*/
+        .highlights{
+            align-items: center;
+            justify-content: center;
+            width:100%;
+            height:auto;
+        }
+        .highlight-text{
+            width:361px;
+            height:299px;
+        }
+        .highlight-text>h1{
+            font-size: 20px;
+            margin-left: 10px;
+        }
+        .highlight-text p{
+            margin-left: 10px;
+        }
+       
+        .featuredImage img{
+            width:340px;
+            height:248px;
+        }
+        .watch-highlight-button{
+            margin-top: 5px;
+            margin-left: 10px;
+        }
+    /*High Light CSS Responsive*/
+    
+    /* News Container */
+        .newcontainer{
+            grid-template-columns: 1fr 1fr; 
+        }
+        /* .newsCard img{
+            margin-right: 20px;
+        } */
+    /* News Container */
+    }    
+    
