--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -15,11 +15,12 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    width:1161px
 }
 
 /* CSS rule for Navbar */
 .header-nav{
-    width:1161px;
+    width:100%;
     display: flex;
     justify-content: space-between;
 }
@@ -50,7 +51,7 @@
 
 /* CSS rule for Banner */
 .copa-logo-title{
-    width:1161px;
+    width:100%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
@@ -239,6 +240,7 @@
 
 /* Media Queries for Mobile Devices up 480px*/
 
+/* Device Size 48opx: moble devices (source: https://www.freecodecamp.org/) */
 @media only screen and (max-width: 480px){
 /* Header Responsive */
     #header{
@@ -276,6 +278,10 @@
         display: grid;
         grid-template-columns:1fr;
     }
+    .player-info{
+        width:300px;
+        margin-left: 20px;
+    }
 /* Player Card Responsive */
 
 /*High Light CSS Responsive*/
@@ -289,13 +295,16 @@
     .highlight-text{
         width:361px;
         height:299px;
+        padding-left: 25px;
     }
     .highlight-text>h1{
         font-size: 20px;
-        margin-left: 10px;
+        padding-left: 20px;
     }
     .highlight-text p{
-        margin-left: 10px;
+        padding-left: 25px;
+        padding-right: 25px;
+        font-size: 16px;
     }
    
     .featuredImage img{
@@ -314,8 +323,9 @@
 /* News Container */
 }    
 
-/* Media Queries */
 
+
+/* Device Size 481px — 768px: ipads and tablets (source: https://www.freecodecamp.org/) */
 @media screen and (min-width: 481px) and (max-width: 768px){
     /* Header Responsive */
         #header{
@@ -366,7 +376,6 @@
             animation-iteration-count: 1;
         }
     
-       
     /* Header Banner Responsive */ 
     /* Player Card Responsive */
         .player-cards{
@@ -417,5 +426,220 @@
             margin-right: 20px;
         } */
     /* News Container */
-    }    
+}    
+
+/* Device Size 769px — 1024px: Small screens, laptops (source: https://www.freecodecamp.org/) */
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    /* Header Responsive */
+        #header{
+            max-width:1024px;
+            height:auto;
+        }
+        .header-nav{
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        .nav-links a{
+            margin-right: 26px;
+            text-decoration: none;
+            color:#FFFFFF;
+            font-size: 15px;
+            padding:0px 5px 0px 5px;
+        }
+        .nav-button{
+            width:113px;
+            height:34px;
+        }
+        
+    /* Header Responsive */
+    /* Header Banner Responsive */
+        .copa-logo-title{
+            margin-top: 40px;
+            max-width:100%;
+            grid-template-columns: 1fr 1fr;
+            column-gap: none;
+        }
+        .copa-title h1{
+            font-size: 36px;
+            margin: 30px 49px 9.5px 33px
+        }
+        .watch-button{
+            margin-top: 27px;
+            margin-left: 33px;
+            margin-bottom: 15px;
+            width: 168px;
+            height:44px;
+        }
+        .copa-logo img{
+            width:329px;
+            height: 260px;
+        }
+        .copa-logo img:hover{
+            animation-iteration-count: 1;
+        }
     
+    /* Header Banner Responsive */ 
+    /* Player Card Responsive */
+        .player-cards{
+            display: grid;
+            grid-template-columns:1fr 1fr;
+            column-gap: 10px;
+        }
+       .card{
+           width:320px;
+           height:auto;
+       }
+    /* Player Card Responsive */
+    
+    /*High Light CSS Responsive*/
+        .highlights{
+            align-items: center;
+            justify-content: center;
+            width:100%;
+            height:auto;
+        }
+        .highlight-text{
+            width:361px;
+            height:299px;
+        }
+        .highlight-text>h1{
+            font-size: 20px;
+            margin-left: 10px;
+        }
+        .highlight-text p{
+            margin-left: 10px;
+        }
+       
+        .featuredImage img{
+            width:340px;
+            height:248px;
+        }
+        .watch-highlight-button{
+            margin-top: 5px;
+            margin-left: 10px;
+        }
+    /*High Light CSS Responsive*/
+    
+    /* News Container */
+        .newcontainer{
+            grid-template-columns: 1fr 1fr; 
+        }
+        /* .newsCard img{
+            margin-right: 20px;
+        } */
+    /* News Container */
+}   
+/* Device Size 1025px — 1200px: desktop, large screen (source: https://www.freecodecamp.org/) */
+@media screen and (min-width: 1025px) and (max-width: 1200px){
+    /* Header Responsive */
+        #header{
+            max-width:1200px;
+            height:auto;
+        }
+        .header-nav{
+            width: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+        .nav-links a{
+            margin-right: 26px;
+            text-decoration: none;
+            color:#FFFFFF;
+            font-size: 5rem;
+        }
+        .nav-button{
+            width:113px;
+            height:34px;
+            font-size: 3em;
+        }
+        
+    /* Header Responsive */
+    /* Header Banner Responsive */
+        .copa-logo-title{
+            margin-top: 40px;
+            max-width:100%;
+            grid-template-columns: 1fr 1fr; 
+            column-gap: none;
+        }
+        .copa-title h1{
+            font-size: 36px;
+            margin: 30px 49px 9.5px 33px
+        }
+        .watch-button{
+            margin-top: 27px;
+            margin-left: 33px;
+            margin-bottom: 15px;
+            width: 168px;
+            height:44px;
+        }
+        .copa-logo img{
+            width:329px;
+            height: 260px;
+        }
+        .copa-logo img:hover{
+            animation-iteration-count: 1;
+        }
+    
+    /* Header Banner Responsive */ 
+    /* Player Card Responsive */
+        .player-cards{
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            column-gap: 30px;
+        }
+       .card{
+           width:320px;
+           height:auto;
+       }
+    /* Player Card Responsive */
+    
+    /*High Light CSS Responsive*/
+        .highlights{
+            align-items: center;
+            justify-content: center;
+            width:100%;
+            height:auto;
+        }
+        .highlight-text{
+            width:361px;
+            height:299px;
+        }
+        .highlight-text>h1{
+            font-size: 20px;
+            margin-left: 10px;
+        }
+        .highlight-text p{
+            margin-left: 10px;
+        }
+       
+        .featuredImage img{
+            width:567px;
+            height:427px;
+        }
+        .featuredImage img{
+            width:340px;
+            height:248px;
+        }
+        .watch-highlight-button{
+            margin-top: 5px;
+            margin-left: 10px;
+        }
+    /*High Light CSS Responsive*/
+    
+    /* News Container */
+        .newcontainer{
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+        .newsCard img{
+            width:100%;
+        }
+
+    /* News Container */
+}  
+
+
+
+
