--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -94,7 +94,7 @@
     animation-duration: 1s;
     animation-iteration-count: infinite;
     /* linear | ease | ease-in | ease-out | ease-in-out */
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
 }
 
 /* Animation for Copa Image */
