--- a/Assignment/style.css
+++ b/Assignment/style.css
@@ -1,8 +1,8 @@
 /* Common CSS */
     body{
         font-family: 'Poppins', sans-serif;
-        padding:0px;
-        margin:0px;
+        padding:0;
+        margin:0;
     }
 
 /* CSS rule for Header Element NavBar and Banner */
@@ -58,6 +58,7 @@
     display:flex;
     flex-direction: column;
     justify-content: left;
+    /* border:1px solid black; */
 }
 .copa-title h1{
     padding: 0px;
@@ -81,9 +82,13 @@
 /* CSS rule for Banner */
 
 /* Animation for Copa Image */
+/* .copa-logo{
+    border:1px solid black;
+} */
 .copa-logo img{
     width:556px;
     height:438px;
+
 }
 @keyframes imageSpin {
     from {transform: rotate(0deg);}
@@ -240,19 +245,21 @@
 /* Media Queries for Mobile Devices up 480px*/
 
 /* Device Size 48opx: moble devices (source: https://www.freecodecamp.org/) */
-@media only screen and (max-width: 480px){
+@media only screen and (min-width:320px) and (max-width:480px){
+    
 /* Header Responsive */
-    #header{
-        max-width:480px;
-        height:auto;
-    }
+#header{
+    width:98%;
+    height:auto;
+}
+    
     .header-nav{
         display: none;
     }
 /* Header Responsive */
 /* Header Banner Responsive */
     .copa-logo-title{
-        width:100%;
+        width:90%;
         grid-template-columns: 1fr;
     }
     .copa-title h1{
@@ -260,7 +267,7 @@
         margin: 69px 49px 25px 33px
     }
     .copa-logo img{
-        width:329px;
+        width:80%;
         height: 260px;
     }
     .copa-logo img:hover{
@@ -272,6 +279,11 @@
         margin-bottom: 50px;
     }  
 /* Header Banner Responsive */ 
+/*Main Container */
+#main_contanier{
+    width:98%;
+}
+
 /* Player Card Responsive */
     .player-cards{
         display: grid;
@@ -288,27 +300,28 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width:100%;
+        width:98%;
         height:auto;
     }
     .highlight-text{
-        width:361px;
         height:299px;
-        padding-left: 25px;
+        /* padding-left: 25px; */
+        margin-left: 10px;
     }
     .highlight-text>h1{
         font-size: 20px;
-        padding-left: 20px;
+        /* padding-left: 20px;  */
     }
     .highlight-text p{
-        padding-left: 25px;
-        padding-right: 25px;
+        /* padding-left: 25px;
+        padding-right: 25px; */
         font-size: 16px;
     }
    
     .featuredImage img{
-        width:340px;
+        width:95%;
         height:248px; 
+        /* margin-left: 10px; */
     }
     .watch-highlight-button{
         margin-left: 10px;
@@ -319,336 +332,18 @@
     .newcontainer{
         grid-template-columns: 1fr;
     }
-    .newsCard p, a {
-        margin-left: 20px;
-    }
+    /* .newsCard p, a {
+        /* margin-left: 20px; */
     .newsCard a{
         font-size: 18px;
+    }
+    .newsCard img{
+        width:98%;
     }
 /* News Container */
     /* Footer  */
     .footer-logo img{
         width:100%;
     }
-}    
-
-
-
-/* Device Size 481px — 768px: ipads and tablets (source: https://www.freecodecamp.org/) */
-@media screen and (min-width: 481px) and (max-width: 768px){
-    /* Header Responsive */
-        #header{
-            max-width:768px;
-            height:auto;
-        }
-        .header-nav{
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .nav-links a{
-            margin-right: 26px;
-            text-decoration: none;
-            color:#FFFFFF;
-            font-size: 15px;
-        }
-        .nav-button{
-            width:113px;
-            height:34px;
-        }
-        
-    /* Header Responsive */
-    /* Header Banner Responsive */
-        .copa-logo-title{
-            margin-top: 40px;
-            max-width:100%;
-            grid-template-columns: 1fr 1fr;
-            column-gap: none;
-        }
-        .copa-title h1{
-            font-size: 36px;
-            margin: 30px 49px 9.5px 33px
-        }
-        .watch-button{
-            margin-top: 27px;
-            margin-left: 33px;
-            margin-bottom: 15px;
-            width: 168px;
-            height:44px;
-        }
-        .copa-logo img{
-            width:329px;
-            height: 260px;
-        }
-        .copa-logo img:hover{
-            animation-iteration-count: 1;
-        }
     
-    /* Header Banner Responsive */ 
-    /* Player Card Responsive */
-        .player-cards{
-            display: grid;
-            grid-template-columns:1fr 1fr;
-            column-gap: 10px;
-        }
-       .card{
-           width:320px;
-           height:auto;
-       }
-    /* Player Card Responsive */
-    
-    /*High Light CSS Responsive*/
-        .highlights{
-            align-items: center;
-            justify-content: center;
-            width:100%;
-            height:auto;
-        }
-        .highlight-text{
-            width:361px;
-            height:299px;
-        }
-        .highlight-text>h1{
-            font-size: 20px;
-            margin-left: 10px;
-        }
-        .highlight-text p{
-            margin-left: 10px;
-        }
-       
-        .featuredImage img{
-            width:340px;
-            height:248px;
-        }
-        .watch-highlight-button{
-            margin-top: 5px;
-            margin-left: 10px;
-        }
-    /*High Light CSS Responsive*/
-    
-    /* News Container */
-        .newcontainer{
-            grid-template-columns: 1fr 1fr; 
-        }
-        /* .newsCard img{
-            margin-right: 20px;
-        } */
-    /* News Container */
-}    
-
-/* Device Size 769px — 1024px: Small screens, laptops (source: https://www.freecodecamp.org/) */
-@media screen and (min-width: 769px) and (max-width: 1024px){
-    /* Header Responsive */
-        #header{
-            max-width:1024px;
-            height:auto;
-        }
-        .header-nav{
-            width: 100%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-        .nav-links a{
-            margin-right: 26px;
-            text-decoration: none;
-            color:#FFFFFF;
-            font-size: 15px;
-            padding:0px 5px 0px 5px;
-        }
-        .nav-button{
-            width:113px;
-            height:34px;
-        }
-        
-    /* Header Responsive */
-    /* Header Banner Responsive */
-        .copa-logo-title{
-            margin-top: 40px;
-            max-width:100%;
-            grid-template-columns: 1fr 1fr;
-            column-gap: none;
-        }
-        .copa-title h1{
-            font-size: 36px;
-            margin: 30px 49px 9.5px 33px
-        }
-        .watch-button{
-            margin-top: 27px;
-            margin-left: 33px;
-            margin-bottom: 15px;
-            width: 168px;
-            height:44px;
-        }
-        .copa-logo img{
-            width:329px;
-            height: 260px;
-        }
-        .copa-logo img:hover{
-            animation-iteration-count: 1;
-        }
-    
-    /* Header Banner Responsive */ 
-    /* Player Card Responsive */
-        .player-cards{
-            display: grid;
-            grid-template-columns:1fr 1fr;
-            column-gap: 10px;
-        }
-       .card{
-           width:320px;
-           height:auto;
-       }
-    /* Player Card Responsive */
-    
-    /*High Light CSS Responsive*/
-        .highlights{
-            align-items: center;
-            justify-content: center;
-            width:100%;
-            height:auto;
-        }
-        .highlight-text{
-            width:361px;
-            height:299px;
-        }
-        .highlight-text>h1{
-            font-size: 20px;
-            margin-left: 10px;
-        }
-        .highlight-text p{
-            margin-left: 10px;
-        }
-       
-        .featuredImage img{
-            width:340px;
-            height:248px;
-        }
-        .watch-highlight-button{
-            margin-top: 5px;
-            margin-left: 10px;
-        }
-    /*High Light CSS Responsive*/
-    
-    /* News Container */
-        .newcontainer{
-            grid-template-columns: 1fr 1fr; 
-        }
-        /* .newsCard img{
-            margin-right: 20px;
-        } */
-    /* News Container */
-}   
-/* Device Size 1025px — 1200px: desktop, large screen (source: https://www.freecodecamp.org/) */
-@media screen and (min-width: 1025px) and (max-width: 1200px){
-    /* Header Responsive */
-        #header{
-            max-width:1200px;
-            height:auto;
-        }
-        .header-nav{
-            width: 100%;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-        }
-        .nav-links a{
-            margin-right: 26px;
-            text-decoration: none;
-            color:#FFFFFF;
-            font-size: 5rem;
-        }
-        .nav-button{
-            width:113px;
-            height:34px;
-            font-size: 3em;
-        }
-        
-    /* Header Responsive */
-    /* Header Banner Responsive */
-        .copa-logo-title{
-            margin-top: 40px;
-            max-width:100%;
-            grid-template-columns: 1fr 1fr; 
-            column-gap: none;
-        }
-        .copa-title h1{
-            font-size: 36px;
-            margin: 30px 49px 9.5px 33px
-        }
-        .watch-button{
-            margin-top: 27px;
-            margin-left: 33px;
-            margin-bottom: 15px;
-            width: 168px;
-            height:44px;
-        }
-        .copa-logo img{
-            width:329px;
-            height: 260px;
-        }
-        .copa-logo img:hover{
-            animation-iteration-count: 1;
-        }
-    
-    /* Header Banner Responsive */ 
-    /* Player Card Responsive */
-        .player-cards{
-            display: grid;
-            grid-template-columns: repeat(3,1fr);
-            column-gap: 30px;
-        }
-       .card{
-           width:320px;
-           height:auto;
-       }
-    /* Player Card Responsive */
-    
-    /*High Light CSS Responsive*/
-        .highlights{
-            align-items: center;
-            justify-content: center;
-            width:100%;
-            height:auto;
-        }
-        .highlight-text{
-            width:361px;
-            height:299px;
-        }
-        .highlight-text>h1{
-            font-size: 20px;
-            margin-left: 10px;
-        }
-        .highlight-text p{
-            margin-left: 10px;
-        }
-       
-        .featuredImage img{
-            width:567px;
-            height:427px;
-        }
-        .featuredImage img{
-            width:340px;
-            height:248px;
-        }
-        .watch-highlight-button{
-            margin-top: 5px;
-            margin-left: 10px;
-        }
-    /*High Light CSS Responsive*/
-    
-    /* News Container */
-        .newcontainer{
-            grid-template-columns: 1fr 1fr 1fr;
-        }
-        .newsCard img{
-            width:100%;
-        }
-
-    /* News Container */
-}  
-
-
-
-
+}
